kstyle/breezestyle.h
@@ -59,7 +59,6 @@ namespace Breeze
     class Helper;
     class MdiWindowShadowFactory;
     class Mnemonics;
-    class PaletteHelper;
     class ShadowHelper;
     class SplitterFactory;
     class WidgetExplorer;
@@ -465,9 +464,6 @@ namespace Breeze
 
         //* helper
         Helper* _helper;
-
-        //* palette helper
-        PaletteHelper* _paletteHelper;
 
         //* shadow helper
         ShadowHelper* _shadowHelper;
